diesel_compile_tests/tests/fail/derive/bad_treat_none_as_default_value.stderr
error: expected `=`
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:13:37
   |
13 | #[diesel(treat_none_as_default_value())]
   |                                     ^

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:21:37
   |
21 | #[diesel(treat_none_as_default_value)]
   |                                     ^
   |
   = help: The correct format looks like `#[diesel(treat_none_as_default_value = true)]`

error: expected boolean literal
  --> tests/fail/derive/bad_treat_none_as_default_value.rs:29:40
   |
29 | #[diesel(treat_none_as_default_value = "foo")]
   |                                        ^^^^^
